cmake_minimum_required(VERSION 3.0)
Project(coLocation)

set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -g)
set(CMAKE_BUILD_TYPE "Debug")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/include/framelib)
include_directories(${PROJECT_SOURCE_DIR}/include/algorithmlib)
add_subdirectory(src)